# time_to_do

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mcp-servers.service  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: README.md  ci.yml  deploy.yml  docs-sync.yml
.windsurf/: mcp.json  settings.json  terminal.bashrc
.windsurf/rules/: agent_workflow_rules.md  ai-instructions-ru.md  cascade_algorithm.md  dependencies_hierarchy.md  design_patterns_rules.md  fastapi_docs.md  fastapi_documentation_ru.md  git_enterprise_rules.md  pep8_guide.md  pre_commit_workflow.md  pydentic_v2_12_ai.md  python_version.md  sqlalchemy_2.0_ide_rules.md  venv-workflow.md  venv_rules.md  web_api_rules.md  zen_python.md
app/: __init__.py  exceptions.py  main.py  middleware.py  validators.py
app/api/v1/: __init__.py  analytics.py  analytics_router.py  api.py  auth.py  files.py  github.py  notifications.py  projects.py  search.py  share_links.py  sprints.py  subscription.py  tasks.py  time_entries.py  users.py  websocket.py
app/auth/: __init__.py  dependencies.py  service.py
app/core/: __init__.py  config.py  constants.py  database.py  redis.py  security.py
app/exceptions/: analytics.py
app/factories/: analytics.py
app/logging/: analytics.py
app/middleware/: subscription.py
app/models/: __init__.py  analytics.py  base.py  file.py  notification.py  project.py  search.py  share_link.py  sprint.py  subscription.py  task.py  time_entry.py  user.py
app/schemas/: __init__.py  analytics.py  analytics_requests.py  auth.py  file.py  notification.py  project.py  search.py  share_link.py  sprint.py  subscription.py  task.py  time_entry.py  user.py
app/services/: addon_service.py  analytics_service.py  file_service.py  notification_service.py  notification_websocket_integration.py  project_service.py  search_decorators.py  search_service.py  share_link_service.py  sprint_service.py  subscription_service.py  task_service.py  user_service.py
app/websocket/: __init__.py  connection.py  events.py  handlers.py  manager.py
docs/: CURRENT_STATUS.md  DEPLOYMENT.md  DEVELOPMENT.md  MCP_SETUP.md  MONETIZATION_PLAN.md  QA_ANALYSIS_REPORT.md  README.md  TERMINAL_SETUP.md  TESTING.md  get-tokens.md
docs/development/: DEVELOPMENT.md  DEVELOPMENT_PLAN.md  MODULE_GUIDE.md
docs/qa/: QA_COMPLETE_GUIDE.md
docs/technical/: ADVANCED_SEARCH.md  API.md  ARCHITECTURE.md  DEPENDENCIES.md  DOCKER_SIMPLE.md  EXTERNAL_SHARING.md  FRONTEND.md  NOTIFICATIONS.md  WEBSOCKET.md
migrations/: env.py
migrations/versions/: 1b658662bd77_add_sender_id_to_notifications.py  344c745e1f4b_initial_migration_with_all_tables.py  4a1a21497fc2_initial_migration.py  5bd0c44c2caa_добавление_story_points_в_модель_задач.py  __init__.py  a1dafd8ebd3e_add_analytics_tables.py  add_files_table.py  add_search_models.py  add_share_link_model.py  c71c96ca53d9_merge_heads_for_analytics.py  e4a2a9af004e_исправление_типов_uuid_в_моделях_sprint_.py
scripts/: __init__.py  activate.sh  docker-reset.sh  install-python313.sh  pre-commit-helper.sh  reinstall-deps.sh
static/css/: main.css
static/js/: analytics.js  main.js  websocket.js
templates/: analytics.html  base.html  files.html  index.html  kanban.html  notifications.html  projects.html  search.html  share_public.html  sprint_burndown.html  sprint_plan.html  sprint_retrospective.html  sprints.html
templates/partials/: notification_dropdown.html  task_card.html
tests/: __init__.py  conftest.py  factories.py  test_api_integration.py  test_auth.py  test_config.py  test_exceptions.py  test_file_service.py  test_files_api.py  test_improvements.py  test_integration.py  test_middleware.py  test_middleware_comprehensive.py  test_notification_websocket_integration.py  test_notifications_basic.py  test_projects.py  test_property_based.py  test_redis_comprehensive.py  test_search.py  test_search_api.py  test_search_service.py  test_services.py  test_share_links.py  test_sprint_retrospective_basic.py  test_sprints_basic.py  test_task_service_improvements.py  test_tasks.py  test_time_entries.py  test_user_service_comprehensive.py  test_users.py  test_validators.py  test_validators_advanced.py  test_validators_comprehensive.py  test_websocket_basic.py
